--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <div class="todo-panel">
+    <div id="default-todo-panel" class="todo-panel">
         <div class="todo-editor">
             <input type="text" id="task-input">
             <button>+</button>
