--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Mini-ToDos</title>
-    
-    </head>
+</head>
+
 <body>
     <div id="default-todo-panel" class="todo-panel">
         <div class="todo-editor">
             <input type="text" id="task-input">
             <button>+</button>
         </div>
-    </div>
-    <div class="todo-items">
-
+        <div class="todo-items"></div>
     </div>
     <script src="scripts.js"></script>
 </body>
