--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Mini-ToDos</title>
+    <title>待办事项列表管理</title>
 </head>
 
 <body>
-    <div  class="todo-panel">
+    <div id="default-todo-panel" class="todo-panel">
         <div class="todo-editor">
             <input type="text" id="task-input">
             <button>+</button>
