--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container" style="height: 100px">
         <div id="header" style="background-color:white;">
-    <h1 style="text-align: center; color:  #7D7DFF;">待办事项列表管理</h1>
+    <h1 style="text-align: center; color:  #6600FF;">待办事项列表管理</h1>
     <div id="default-todo-panel" class="todo-panel">
         <div class="todo-editor">
             <input type="text" id="task-input">
